...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in LS2 9JT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIV-Uv-A95">
                                <rect key="frame" x="254" y="129" width="93" height="21"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="postcodeLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="93" id="PkS-eX-CF2"/>
                                    <constraint firstAttribute="height" constant="21" id="g5i-Cr-Acu"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                <exclude reference="u9w-v4-nqw"/>
                                <exclude reference="BfD-pg-afh"/>
                                <exclude reference="FUB-xY-ICI"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Main" id="uyM-8o-SCq">
                        <barButtonItem key="leftBarButtonItem" image="Menu-100" style="done" id="oc6-Tx-QbB">
                            <connections>
                                <action selector="openDrawer:" destination="BYZ-38-t0r" id="0Oe-eR-H5N"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="2ZS-h3-4dk">
...
                                    <outlet property="delegate" destination="wfO-Qj-5CV" id="SPy-20-rWZ"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kVX-6P-uyj">
                                <rect key="frame" x="459" y="556" width="46" height="30"/>
                                <animations/>
                                <state key="normal" title="Filter"/>
                                <connections>
                                    <action selector="confirmSelection:" destination="wfO-Qj-5CV" eventType="touchUpInside" id="DlK-Hh-aZy"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4v1-Wt-DTk">
                                <rect key="frame" x="82" y="556" width="53" height="30"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lz7-U7-rNv">
                                <rect key="frame" x="44" y="564" width="124" height="30"/>
                                <animations/>
                                <state key="normal" title="Change postcode"/>
                                <connections>
                                    <action selector="changePostcode:" destination="CVD-ON-xIR" eventType="touchUpInside" id="EIa-1g-kx8"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R4C-Bt-Ta1">
                                <rect key="frame" x="488" y="564" width="66" height="30"/>
...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-Zb-8F8">
                                <rect key="frame" x="285" y="540" width="30" height="30"/>
                                <animations/>
                                <state key="normal" title="OK"/>
                                <connections>
                                    <action selector="clickedOK:" destination="COm-aB-fQ7" eventType="touchUpInside" id="O6E-If-a7y"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Postcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvY-S7-woc">
                                <rect key="frame" x="40" y="300" width="122" height="21"/>
...
                                    <rect key="frame" x="91" y="30" width="618" height="33"/>
                                </variation>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter here" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nch-wh-f08">
                                <rect key="frame" x="472" y="297" width="88" height="30"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <variation key="heightClass=regular-widthClass=regular" ambiguous="YES" misplaced="YES">
                                    <rect key="frame" x="672" y="304" width="88" height="30"/>
...
