...
            message: "Please input a new postcode:", preferredStyle: .Alert)
        // Create the cancel action for the alert
        let cancelAction = UIAlertAction(title: "Cancel", style: .Cancel) {
            (_) in }
        // Add text field to allow the postcode to be entered
        alertController.addTextFieldWithConfigurationHandler { (textField) in
            textField.placeholder = "Enter postcode"
        }
        // Create the confirm postcode action, dealing with input cases
        let confirmAction = UIAlertAction(title: "Confirm", style: .Default) {
            (_) in
            if let field = alertController.textFields![0] as? UITextField {
                if field.text!.isEmpty {
                    // If field is empty, show empty postcode entered alert
                    // If no postcode entered, present empty error
                    self.showAlert("Postcode Empty",
...
