...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="QX6-Hn-57T" id="L2D-fI-sQt"/>
                            <outlet property="delegate" destination="QX6-Hn-57T" id="Tbb-p7-Lve"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Priorities" image="High Importance-100" id="ynK-oo-dZm"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EdY-Pf-grB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1052" y="-156"/>
        </scene>
        <!--Neighbourhood Tab Bar Controller-->
...
